# Hatch-Validator

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  package_validator.py  pyproject.toml  requirements.txt  run_validator_tests.py
.github/workflows/: semantic-release.yml
__temp__/: Plan_for_code_base_reorganization.md  Plan_to_refactor_dependency_resolution_code.md  list_of_things_that_should_be_in_registry_accessor.md  refactoring_to_ChainOfResp_and_Strat.md
docs/: README.md  api_reference.md  architecture.md  getting_started.md
hatch-validator/: schemas_retriever.py
hatch_validator/: __init__.py  dependency_resolver.py  package_validator.py  schema_fetcher.py  schema_validators.py  schema_validators_v1_1_0.py  schemas_retriever.py
hatch_validator/core/: pkg_accessor_base.py  pkg_accessor_factory.py  validation_context.py  validation_strategy.py  validator_base.py  validator_factory.py
hatch_validator/package/: package_service.py
hatch_validator/registry/: registry_accessor_base.py  registry_accessor_factory.py  registry_service.py
hatch_validator/utils/: dependency_graph.py  hatch_dependency_graph.py  registry_client.py
tests/: dev_test_validator_chain.py  dev_test_validator_factory.py  run_dev_tests.py  run_validator_tests.py  test_dependency_graph.py  test_dependency_validation_v1_1_0.py  test_package_service.py  test_package_validator.py  test_package_validator_for_v1_2_0.py  test_registry_client.py  test_schema_validators.py  test_schema_validators_v1_1_0.py  test_schemas_retriever.py
(+46 files in other folders)
