[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch-validator"
version = "0.1.0"
authors = [
  { name = "Hatch Team" },
]
description = "Package validator for Hatch packages"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "packaging>=20.0",
]

[project.urls]
"Homepage" = "https://github.com/CrackingShells/Hatch-Validator"
"Bug Tracker" = "https://github.com/CrackingShells/Hatch-Validator/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["hatch-validator"]